gs/src/gdevpdfg.c
@@ -318,6 +318,9 @@ pdf_reset_color(gx_device_pdf * pdev, const gs_imager_state * pis,
 		    return code;
 		cos_value_write(cos_resource_value(&cs_value, pres->object), pdev);
 		pprints1(pdev->strm, " %s\n", ppscc->setcolorn);
+		code = pdf_add_resource(pdev, pdev->substream_Resources, "/Pattern", pres);
+		if (code < 0)
+		    return code;
 	    }
 	    break;
 	default: /* must not happen. */
